--- a/src/web/index.html
+++ b/src/web/index.html
@@ -59,8 +59,8 @@
                     <button class="install-button kook-button" onclick="window.open('https://www.botmarket.cn/bot/28', '_blank')">Install on Kook</button>
                 </h3>
                 <h3>
-                    For Browser:
-                    <button class="install-button web-button" onclick="window.open('https://nori.fish', '_blank')">Nori-Web (nori.fish)</button>
+                    Source Code:
+                    <button class="install-button web-button" onclick="window.open('https://github.com/RawFish69/Nori', '_blank')">Github Repository</button>
                 </h3>
             </div>
             <div class="feature">
