--- a/src/web/index_cn.html
+++ b/src/web/index_cn.html
@@ -56,8 +56,8 @@
                     <button class="install-button kook-button" onclick="window.open('https://www.botmarket.cn/bot/28', '_blank')">Kook安装链接</button>
                 </h3>
                 <h3>
-                    在浏览器上访问:
-                    <button class="install-button web-button" onclick="window.open('https://nori.fish', '_blank')">网站主页</button>
+                    项目源码（网页部分）:
+                    <button class="install-button web-button" onclick="window.open('https://github.com/RawFish69/Nori', '_blank')">Github仓库</button>
                 </h3>
             </div>
             <div class="feature">
