--- a/src/web/wynn/credit/index.html
+++ b/src/web/wynn/credit/index.html
@@ -12,8 +12,8 @@
             <p>Build Contributors: RawFish, gamenoedge, hz4er, 2kaa, birdmade, tankofpacer, floweroftruth, pvz</p>
             <p>Lootpool Contributors: anAlarmingAlarm, Enderclaw</p>
             <p>Recipe Contribuors: Edmond</p>
-            <p>Price Data Contributors: Enderclaw (data collection), RawFish (model tuning), Maretplace Community</p>
-            <p>Item Scale Contributors: Enderclaw, Ingo, Rex, RawFish</p>
+            <p>Price Data Contributors: RawFish (model tuning), Maretplace Community</p>
+            <p>Item Scale Contributors: Enderclaw, Soulbound, T307, Ingo, Rex</p>
             <p>Item Encoding & Decoding: FYWinds, Bolyai & Wynntils Team, RawFish</p>
             <p>Art: birdmade</p>
             <p>Emotional Support: hppeng</p>
