--- a/src/web/index_cn.html
+++ b/src/web/index_cn.html
@@ -59,6 +59,10 @@
                     项目源码（网页部分）:
                     <button class="install-button web-button" onclick="window.open('https://github.com/RawFish69/Nori', '_blank')">Github仓库</button>
                 </h3>
+                <h3>
+                    API文档:
+                    <button class="install-button web-button" onclick="window.open('https://nori.fish/docs/', '_blank')">查看文档</button>
+                </h3>
             </div>
             <div class="feature">
                 <button class="toggle-button" onclick="toggleSection('aboutMeSection', this)">关于开发者</button>
