--- a/src/web/index.html
+++ b/src/web/index.html
@@ -61,6 +61,10 @@
                     Source Code:
                     <button class="install-button web-button" onclick="window.open('https://github.com/RawFish69/Nori', '_blank')">Github Repository</button>
                 </h3>
+                <h3>
+                    API Documentation:
+                    <button class="install-button web-button" onclick="window.open('https://nori.fish/docs/', '_blank')">View Documentation</button>
+                </h3>
             </div>
             <div class="feature">
                 <button class="toggle-button" onclick="toggleSection('aboutMeSection', this)">Nori Developer</button>
