home page updated with demo

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -33,7 +33,7 @@
             <a href="#" onclick="openTab('Home')">Home</a>
             <a href="https://nori.fish/wynn">Wynn</a>
             <a href="https://nori.fish/docs">Docs</a>
-            <a href="https://nori.fish/chat">Playground</a>
+            <a href="https://nori.fish/demo">Demo</a>
         </nav>
         <div class="language-selector">
             <select onchange="changeLanguage(this)">
