--- a/src/web/index_cn.html
+++ b/src/web/index_cn.html
@@ -29,7 +29,7 @@
             <a href="#" onclick="openTab('Home')">主页</a>
             <a href="https://nori.fish/wynn">Wynn</a>
             <a href="https://nori.fish/docs">文档</a>
-            <a href="https://nori.fish/chat">实验功能</a>
+            <a href="https://nori.fish/demo">实验功能</a>
             <!-- Removed the "关于我" link -->
         </nav>
         <div class="language-selector">
