3d demo for claw control

--- a/src/web/demo/drive/index.html
+++ b/src/web/demo/drive/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta property="og:title" content="Robot Control Interface" />
+    <meta property="og:description" content="demo" />
     <title>Robot Control</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
     <script async src="../../js_global/analytics.js"></script>
