--- a/src/web/demo/index.html
+++ b/src/web/demo/index.html
@@ -33,7 +33,8 @@
     <h1>Demos from stuff i did in the past</h1>
     <ul>
         <li><a href="https://nori.fish/demo/drive">Differential drive control</a></li>
-        <li><a href="https://nori.fish/demo/claw">Claw machine 2D</a></li>
+        <li><a href="https://nori.fish/demo/claw2d">Claw machine 2D</a></li>
+        <li><a href="https://nori.fish/demo/claw3d">Claw machine 3D</a></li>
         <li><a href="https://nori.fish/chat">AI-Chat</a></li>
     </ul>
 </body>
