quick patch for demo

--- a/src/web/demo/claw3d/index.html
+++ b/src/web/demo/claw3d/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" href="../../fish_logo.png" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/>
   <meta property="og:title" content="Claw Control 3D" />
   <meta property="og:description" content="demo" />
   <title>3D Claw Machine Control</title>
