--- a/src/web/demo/drive/index.html
+++ b/src/web/demo/drive/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="../../fish_logo.png" type="image/x-icon">
     <meta property="og:title" content="Robot Control Interface" />
     <meta property="og:description" content="demo" />
     <title>Robot Control</title>
