--- a/src/web/demo/claw2d/index.html
+++ b/src/web/demo/claw2d/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
+    <link rel="icon" href="../../fish_logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:title" content="Claw Control 2D" />
     <meta property="og:description" content="demo" />
