--- a/src/web/demo/drive/index.html
+++ b/src/web/demo/drive/index.html
@@ -371,6 +371,8 @@
     </div>
 
     <script>
+        // This is the client side script for the robot control interface
+        // Meant to run on ESP32 with the backend code
         const modeToggle = document.getElementById('modeToggle');
         const motorControl = document.querySelector('.motor-control');
         const autoControl = document.querySelector('.auto-control');
