--- a/src/web/demo/claw3d/index.html
+++ b/src/web/demo/claw3d/index.html
@@ -12,7 +12,6 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
   <script async src="../../js_global/analytics.js"></script>
-  <script async src="../../js_global/demo_claw3d.js"></script>
 </head>
 <body>
   <div class="container">
@@ -68,5 +67,6 @@
       </div>
     </div>
   </div>
+  <script src="claw3d.js"></script>
 </body>
 </html>
