--- a/src/web/demo/claw3d/index.html
+++ b/src/web/demo/claw3d/index.html
@@ -56,6 +56,8 @@
           <option value="30">30</option>
           <option value="50">50</option>
           <option value="100">100</option>
+          <option value="300">300</option>
+          <option value="500">500</option>
         </select>
         <button id="generateBtn">Generate</button>
       </div>
