--- a/src/web/demo/index.html
+++ b/src/web/demo/index.html
@@ -36,6 +36,7 @@
         <li><a href="https://nori.fish/demo/drive">Differential drive control</a></li>
         <li><a href="https://nori.fish/demo/claw2d">Claw machine 2D</a></li>
         <li><a href="https://nori.fish/demo/claw3d">Claw machine 3D</a></li>
+        <li><a href="https://nori.fish/demo/rc">Web RC Car</a></li>
         <li><a href="https://nori.fish/chat">AI-Chat</a></li>
     </ul>
 </body>
