--- a/src/web/index_cn.html
+++ b/src/web/index_cn.html
@@ -73,6 +73,7 @@
                     <p>- Autonomous Differential-Drive Mobile Robot with Web Interface (C, C++)</p>
                     <p>- Package for 7 DOF Robot Arm Control & Vision System (Python)</p>
                     <p>- <a href="https://github.com/RawFish69/ESP32-Ranger-Finder" target="_blank" class="install-link">Portable range finder with ESP32 (Arduino C++)</a></p>
+                    <p>- <a href="https://github.com/RawFish69/ESP32-RC-Car" target="_blank" class="install-link">Web RC Car with ESP32 (Arduino C++)</a></p>
                     <p>- WIP 2D Rogue-like game developed with Godot Engine (GDScript, C++, C#)</p>
                     <p>- Image Generation Tool (HTML, JavaScript, CSS, Python)</p>
                     <p>- Inventory Control (VB.net)</p>
