added space orbs game

--- a/src/web/demo/index.html
+++ b/src/web/demo/index.html
@@ -33,10 +33,11 @@
 <body>
     <h1>Demos from stuff i did in the past</h1>
     <ul>
-        <li><a href="https://nori.fish/demo/drive">Differential drive control</a></li>
+        <li><a href="https://game.nori.fish">Space Orbs (Multiplayer Web Game)</a></li>
         <li><a href="https://nori.fish/demo/claw2d">Claw machine 2D</a></li>
         <li><a href="https://nori.fish/demo/claw3d">Claw machine 3D</a></li>
-        <li><a href="https://nori.fish/demo/rc">Web RC Car</a></li>
+        <li><a href="https://nori.fish/demo/rc">Web RC Car control panel</a></li>
+        <li><a href="https://nori.fish/demo/drive">Differential drive control panel</a></li>
         <li><a href="https://nori.fish/chat">AI-Chat</a></li>
     </ul>
 </body>
