--- a/src/web/index.html
+++ b/src/web/index.html
@@ -73,7 +73,8 @@
                     <p>I find enjoyment in transforming my concepts into reality.</p>
                     <p>Some of my other projects:</p>
                     <p>- Autonomous Differential-Drive Mobile Robot with Web Interface (C, C++)</p>
-                    <p>- Package for 7 DOF Robot Arm Control & Vision System (Python)</p>
+                    <p>- Controls 7 DOF Robot Arm Control & Vision System (Python)</p>
+                    <p>- <a href="https://game.nori.fish" target="_blank" class="install-link">Space Orbs - Multiplayer Web Game (WebGL, Flask)</a></p>
                     <p>- <a href="https://github.com/RawFish69/ESP32-Ranger-Finder" target="_blank" class="install-link">Portable range finder with ESP32 (Arduino C++)</a></p>
                     <p>- <a href="https://github.com/RawFish69/ESP32-RC-Car" target="_blank" class="install-link">Web RC Car with ESP32 (Arduino C++)</a></p>
                     <p>- WIP 2D Rogue-like game developed with Godot Engine (GDScript, C++, C#)</p>
