--- a/src/web/chat/index.html
+++ b/src/web/chat/index.html
@@ -8,6 +8,7 @@
     <meta property="og:description" content="Chat with Bot" />
     <meta property="og:url" content="https://nori.fish/chat" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>Nori-Chat</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../css_global/sidebar.css">
@@ -18,6 +19,8 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
     <script src="../js_global/analytics.js"></script>
+    <script src="../js_global/config.js"></script>
+    <script src="../js_global/layout.js"></script>
 </head>
 <body>
     <header>
@@ -26,8 +29,7 @@
             <h1>Nori-Web</h1>
         </div>
         <nav>
-            <a href="https://nori.fish">Home</a>
-            <a href="https://nori.fish/wynn">Wynn</a>
+            <!-- Navigation links will be inserted by layout.js -->
         </nav>
     </header>
     <div id="menu-button" onclick="toggleSidebar()">☰</div>
