--- a/src/web/demo/claw3d/index.html
+++ b/src/web/demo/claw3d/index.html
@@ -6,12 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/>
   <meta property="og:title" content="Claw Control 3D" />
   <meta property="og:description" content="demo" />
+  <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
   <title>3D Claw Machine Control</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
   <script async src="../../js_global/analytics.js"></script>
+  <script src="../../js_global/config.js"></script>
+  <script src="../../js_global/layout.js"></script>
 </head>
 <body>
   <div class="container">
