--- a/src/web/demo/drive/index.html
+++ b/src/web/demo/drive/index.html
@@ -4,9 +4,12 @@
     <link rel="icon" href="../../fish_logo.png" type="image/x-icon">
     <meta property="og:title" content="Robot Control Interface" />
     <meta property="og:description" content="demo" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>Robot Control</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
     <script async src="../../js_global/analytics.js"></script>
+    <script src="../../js_global/config.js"></script>
+    <script src="../../js_global/layout.js"></script>
     <style>
         :root {
             --primary-color: #1a73e8;
@@ -128,7 +131,6 @@
         }
 
         input[type="range"] {
-            -webkit-appearance: none;
             width: 100%;
             height: 4px;
             border-radius: 7.5px;
