--- a/src/web/demo/rc/index.html
+++ b/src/web/demo/rc/index.html
@@ -4,7 +4,12 @@
   <title>ESP32 RC Car</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="ESP32 RC Car" />
+  <meta property="og:description" content="Remote Control Car Interface" />
+  <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
   <link rel="stylesheet" href="styles.css">
+  <script src="../../js_global/config.js"></script>
+  <script src="../../js_global/layout.js"></script>
 </head>
 <body>
   <div class="container">
