--- a/src/web/index.html
+++ b/src/web/index.html
@@ -22,6 +22,8 @@
     <script src="js_global/analytics.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484" 
     data-overlays="bottom" crossorigin="anonymous"></script>
+    <script src="js_global/config.js"></script>
+    <script src="js_global/layout.js"></script>
 </head>
 <body>
     <header>
@@ -30,10 +32,7 @@
             <h1>Nori Hub</h1>
         </div>
         <nav>
-            <a href="#" onclick="openTab('Home')">Home</a>
-            <a href="https://nori.fish/wynn">Wynn</a>
-            <a href="https://nori.fish/docs">Docs</a>
-            <a href="https://nori.fish/demo">Demo</a>
+            <!-- Navigation links will be inserted by layout.js -->
         </nav>
         <div class="language-selector">
             <select onchange="changeLanguage(this)">
