--- a/src/web/resources/index.html
+++ b/src/web/resources/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta property="og:title" content="Nori-Web Resources" />
+    <meta property="og:description" content="Resources for Nori-Web" />
+    <meta property="og:url" content="https://nori.fish/resources" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
+    <title>Nori-Web Resources</title>
+    <script src="../js_global/config.js"></script>
+    <script src="../js_global/layout.js"></script>
+</head>
 <body>
     <header>
         <h1>Nori-Web resources</h1>
