--- a/src/web/wynn/item/index.html
+++ b/src/web/wynn/item/index.html
@@ -8,6 +8,7 @@
     <meta property="og:description" content="Nori-Web Items Features" />
     <meta property="og:url" content="https://nori.fish/items" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>Nori-Items</title>
     <link rel="stylesheet" href="../../css_global/sidebar.css">
     <link rel="stylesheet" href="styles.css">
@@ -17,6 +18,8 @@
     <script src="../../js_global/analytics.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484"
     data-overlays="bottom" crossorigin="anonymous"></script>
+    <script src="../../js_global/config.js"></script>
+    <script src="../../js_global/layout.js"></script>
 </head>
 <body>
     <header>
@@ -25,9 +28,7 @@
             <h1>Nori-Wynn Items</h1>
         </div>
         <nav>
-            <a href="https://nori.fish">Home</a>
-            <a href="https://discord.com/application-directory/873677970928193568" target="_blank">Nori-Bot (Discord)</a>
-            <a href="https://discord.gg/eDssA6Jbwd" target="_blank">Support Server</a>
+            <!-- Navigation links will be inserted by layout.js -->
         </nav>
     </header>
     <div id="menu-button" onclick="toggleSidebar()">☰</div>
