--- a/src/web/wynn/item/lootpool/index.html
+++ b/src/web/wynn/item/lootpool/index.html
@@ -8,6 +8,7 @@
     <meta property="og:description" content="Item Weekly Lootpool Rotation" />
     <meta property="og:url" content="https://nori.fish/wynn/item/lootpool" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <meta name="session-token" content="">
     <title>Nori-Wynn Item Lootpool</title>
     <link rel="stylesheet" href="styles.css">
@@ -20,6 +21,8 @@
     <script src="../../../js_global/analytics.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484"
     data-overlays="bottom" crossorigin="anonymous"></script>
+    <script src="../../../js_global/config.js"></script>
+    <script src="../../../js_global/layout.js"></script>
 </head>
 <body>
     <header>
