--- a/src/web/wynn/leaderboard/index.html
+++ b/src/web/wynn/leaderboard/index.html
@@ -8,6 +8,7 @@
     <meta property="og:description" content="Leaderboards for Wynncraft" />
     <meta property="og:url" content="https://nori.fish/wynn/leaderboard" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>Nori-Wynn Leaderboard</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../../css_global/default.css">
@@ -19,6 +20,8 @@
     <script src="../../js_global/leaderboard.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484"
     data-overlays="bottom" crossorigin="anonymous"></script>
+    <script src="../../js_global/config.js"></script>
+    <script src="../../js_global/layout.js"></script>
 </head>
 <body>
     <header>
@@ -27,10 +30,7 @@
             <h1>Nori-Wynn</h1>
         </div>
         <nav>
-            <a href="https://nori.fish">Home</a>
-            <a href="https://nori.fish/wynn">Wynn</a>
-            <a href="https://discord.com/application-directory/873677970928193568" target="_blank">Nori-Bot (Discord)</a>
-            <a href="https://discord.gg/eDssA6Jbwd" target="_blank">Support Server</a>
+            <!-- Navigation links will be inserted by layout.js -->
         </nav>
     </header>
 
