--- a/src/web/wynn/showcase/index.html
+++ b/src/web/wynn/showcase/index.html
@@ -8,9 +8,11 @@
     <meta property="og:description" content="Nori-Web Build Showcase" />
     <meta property="og:url" content="https://nori.fish/build/showcase" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>Nori-Wynn Build Showcase</title>
     <link rel="stylesheet" href="../../css_global/sidebar.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../css_global/default.css">
     <link rel="stylesheet" href="../../css_global/dark_theme.css" id="dark-theme-css" disabled>
     <script type="text/javascript" src="../../js_global/sidebar.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
@@ -18,6 +20,8 @@
     <script src="../../js_global/load_showcase.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484"
     data-overlays="bottom" crossorigin="anonymous"></script>
+    <script src="../../js_global/config.js"></script>
+    <script src="../../js_global/layout.js"></script>
 </head>
 <body>
     <header>
@@ -26,9 +30,7 @@
             <h1>Nori-Wynn</h1>
         </div>
         <nav>
-            <a href="https://nori.fish">Home</a>
-            <a href="https://discord.com/application-directory/873677970928193568" target="_blank">Nori-Bot (Discord)</a>
-            <a href="https://discord.gg/eDssA6Jbwd" target="_blank">Support Server</a>
+            <!-- Navigation links will be inserted by layout.js -->
         </nav>
     </header>
 
