--- a/src/web/wynn/uptime/index.html
+++ b/src/web/wynn/uptime/index.html
@@ -8,6 +8,7 @@
     <meta property="og:description" content="World Uptime & Soul Point Timer" />
     <meta property="og:url" content="https://nori.fish/wynn/uptime" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>Nori-Wynn</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../../css_global/default.css">
@@ -16,10 +17,12 @@
     <script type="text/javascript" src="../../js_global/sidebar.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@latest/dist/zero-md.min.js"></script>
     <script src="../../js_global/uptime.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
     <script src="../../js_global/analytics.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484"
     data-overlays="bottom" crossorigin="anonymous"></script>
+    <script src="../../js_global/config.js"></script>
+    <script src="../../js_global/layout.js"></script>
 </head>
 <body>
     <header>
@@ -28,10 +31,7 @@
             <h1>Nori-Wynn</h1>
         </div>
         <nav>
-            <a href="https://nori.fish">Home</a>
-            <a href="https://nori.fish/wynn">Wynn</a>
-            <a href="https://discord.com/application-directory/873677970928193568" target="_blank">Nori-Bot (Discord)</a>
-            <a href="https://discord.gg/eDssA6Jbwd" target="_blank">Support Server</a>
+            <!-- Navigation links will be inserted by layout.js -->
         </nav>
     </header>
 
