--- a/src/web/demo/claw2d/index.html
+++ b/src/web/demo/claw2d/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:title" content="Claw Control 2D" />
     <meta property="og:description" content="demo" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>2D Claw Machine Control</title>
     <link rel="stylesheet" href="styles.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
     <script async src="../../js_global/analytics.js"></script>
     <script async src="../../js_global/demo_claw2d.js"></script>
+    <script src="../../js_global/config.js"></script>
+    <script src="../../js_global/layout.js"></script>
 </head>
 <body>
   <div class="container">
