--- a/src/web/index_cn.html
+++ b/src/web/index_cn.html
@@ -8,6 +8,7 @@
     <meta property="og:description" content="Nori 中文站" />
     <meta property="og:url" content="https://nori.fish" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>Nori 中文站</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css_global/default.css">
@@ -30,7 +31,6 @@
             <a href="https://nori.fish/wynn">Wynn</a>
             <a href="https://nori.fish/docs">文档</a>
             <a href="https://nori.fish/demo">实验功能</a>
-            <!-- Removed the "关于我" link -->
         </nav>
         <div class="language-selector">
             <select onchange="changeLanguage(this)">
