--- a/src/web/license/index.html
+++ b/src/web/license/index.html
@@ -8,9 +8,12 @@
     <meta property="og:description" content="License for Nori-Web" />
     <meta property="og:url" content="https://nori.fish/license" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>Nori-Web License</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
     <script src="../js_global/analytics.js"></script>
+    <script src="../js_global/config.js"></script>
+    <script src="../js_global/layout.js"></script>
 </head>
 <body>
     <header>
