--- a/src/web/wynn/item/changelog/index.html
+++ b/src/web/wynn/item/changelog/index.html
@@ -8,6 +8,7 @@
     <meta property="og:description" content="Item & ingredient changelogs in Nori-Wynn" />
     <meta property="og:url" content="https://nori.fish/wynn/item/changelog" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>Nori-Wynn Item Changes</title>
     <link rel="stylesheet" href="../../../css_global/default.css">
     <link rel="stylesheet" href="../../../css_global/sidebar.css">
@@ -20,6 +21,8 @@
     <script src="../../../js_global/analytics.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484"
     data-overlays="bottom" crossorigin="anonymous"></script>
+    <script src="../../../js_global/config.js"></script>
+    <script src="../../../js_global/layout.js"></script>
 </head>
 <body>
     <header>
@@ -28,10 +31,7 @@
             <h1>Nori-Wynn</h1>
         </div>
         <nav>
-            <a href="https://nori.fish">Home</a>
-            <a href="https://nori.fish/wynn">Wynn</a>
-            <a href="https://nori.fish/wynn/item">Item</a>
-            <a href="https://discord.gg/eDssA6Jbwd" target="_blank">Discord</a>
+            <!-- Navigation links will be inserted by layout.js -->
         </nav>
     </header>
     <div id="menu-button" onclick="toggleSidebar()">☰</div>
