--- a/src/web/wynn/item/simulation/index.html
+++ b/src/web/wynn/item/simulation/index.html
@@ -12,6 +12,7 @@
     <title>Nori-Wynn Item Simulation</title>
     <link rel="stylesheet" href="../../../css_global/sidebar.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../../css_global/default.css">
     <link rel="stylesheet" href="../../../css_global/dark_theme.css" id="dark-theme-css" disabled>
     <script type="text/javascript" src="../../../js_global/sidebar.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
