--- a/src/web/wynn/guild/index.html
+++ b/src/web/wynn/guild/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="https://nori.fish/resources/nori_logo.png" />
     <title>Nori-Wynn Guild Stats</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../css_global/default.css">
     <link rel="stylesheet" href="../../css_global/sidebar.css">
     <link rel="stylesheet" href="../../css_global/dark_theme.css" id="dark-theme-css" disabled>
     <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@latest/dist/zero-md.min.js"></script>
