about me updated

--- a/src/web/index_cn.html
+++ b/src/web/index_cn.html
@@ -69,9 +69,9 @@
                 <div id="aboutMeSection" style="display: block;">
                     <h2>关于我 （开发者）</h2>
                     <p>I find enjoyment in transforming my concepts into reality.</p>
-                    <p>Some of my other projects:</p>
+                    <p>My other software projects:</p>
                     <p>- Autonomous Differential-Drive Mobile Robot with Web Interface (C, C++)</p>
-                    <p>- Controls for 7 DOF Robot Arm Control & Vision System (Python)</p>
+                    <p>- Controls for 7 DOF Robot Arm & Vision System (Python, ROS)</p>
                     <p>- <a href="https://game.nori.fish" target="_blank" class="install-link">Space Orbs - Multiplayer Web Game (WebGL, Flask)</a></p>
                     <p>- <a href="https://github.com/RawFish69/ESP32-Ranger-Finder" target="_blank" class="install-link">Portable range finder with ESP32 (Arduino C++)</a></p>
                     <p>- <a href="https://github.com/RawFish69/ESP32-RC-Car" target="_blank" class="install-link">Web RC Car with ESP32 (Arduino C++)</a></p>
