--- a/src/web/index_cn.html
+++ b/src/web/index_cn.html
@@ -67,18 +67,20 @@
             <div class="feature">
                 <button class="toggle-button" onclick="toggleSection('aboutMeSection', this)">关于开发者</button>
                 <div id="aboutMeSection" style="display: block;">
-                    <h2>关于我 （开发者）</h2>
+                    <h2>关于我 （以下为原文）</h2>
                     <p>I find enjoyment in transforming my concepts into reality.</p>
-                    <p>My other software projects:</p>
+                    <p>My other non-research/work related projects:</p>
+                    <p>- Multiple models of FPV Drones: Free style, Racing, Long Range.</p>
+                    <p>- ESP32 Quadcopter, custom frame, PCB, and flight controller firmware. (C++)</p>
                     <p>- Autonomous Differential-Drive Mobile Robot with Web Interface (C, C++)</p>
                     <p>- Controls for 7 DOF Robot Arm & Vision System (Python, ROS)</p>
                     <p>- <a href="https://game.nori.fish" target="_blank" class="install-link">Space Orbs - Multiplayer Web Game (WebGL, Flask)</a></p>
-                    <p>- <a href="https://github.com/RawFish69/ESP32-Ranger-Finder" target="_blank" class="install-link">Portable range finder with ESP32 (Arduino C++)</a></p>
                     <p>- <a href="https://github.com/RawFish69/ESP32-RC-Car" target="_blank" class="install-link">Web RC Car with ESP32 (Arduino C++)</a></p>
+                    <p>- <a href="https://github.com/RawFish69/Toast-E" target="_blank" class="install-link">Thermal Sensor Mobile Bot (Arduino C++)</a></p>
+                    <p>- <a href="https://github.com/RawFish69/ESP32-Ranger-Finder" target="_blank" class="install-link">Portable range finder with ESP32 (Arduino C++)</a></p>
                     <p>- WIP 2D Rogue-like game developed with Godot Engine (GDScript, C++, C#)</p>
-                    <p>- Image Generation Tool (HTML, JavaScript, CSS, Python)</p>
-                    <p>- Inventory Control (VB.net)</p>
-                    <p>- Various utility bots (JavaScript, Python)</p>
+                    <p>- Inventory Control Windows Application (VB.NET)</p>
+                    <p>- Various utility bots and websites (JavaScript, Python)</p>
                     <h2>联系方式</h2>
                     <p>Discord: rawfish69</p>
                     <p><a href="https://github.com/RawFish69" target="_blank" class="install-link">GitHub Page</a></p>
